# SRPLightingEngine

./: .gitignore  CMakeLists.txt  CorruptedAlter.fbx  README.md  TODO.md  raymarcher.glsl
.cache/clangd/index/: gui.cpp.9674AF65ACF7B4BD.idx  gui.cpp.9EDE2FCB34FB1ED3.idx  gui.h.3D84B5277BA5FBEC.idx  gui.h.FE04030B028746ED.idx  main.cpp.2EFB7FE7F90A39E7.idx  main.cpp.ED9BE95C714867E1.idx  movement.cpp.7427DB18F92F09DB.idx  movement.cpp.A1AA343EAFFCD7D7.idx  movement.h.0D5C0F59114DD7FA.idx  movement.h.31C6D5E9E91D35F8.idx  shaderLoad.cpp.0DCC5E06D8E5ECB0.idx  shaderLoad.cpp.80AD4CD7A3C5A93A.idx  shaderLoad.h.72FA6AFE1D4EC53A.idx  shaderLoad.h.FB4BDFAB2F683F8D.idx
Materials/: Complex Lit.mat  RenderMat.mat  Skybox.mat  Transparent.mat  UNlit.mat
Render Pipeline/Assets/: Render Settings.asset  RenderPipeline.asset  Untitled.fbx
Render Pipeline/Runtime/: CustomRenderPipeline.cs  CustomRenderPipelineAsset.cs  CustomRenderPipelineNew.cs  Geometry.cs  RenderPass.cs  RenderSettings.cs
Render Pipeline/Scenes/: SampleScene.unity
Render Pipeline/Shader Code/: BVHBroadPhase.compute  BVHConstruct.compute  ComputeFractalSDF.compute  Debug.compute  GenerateNoise.compute  Geometry.hlsl  Lighting.hlsl  Noise.hlsl  RadixSort.compute  RayHit.hlsl  RayHitResolution.compute  RayMarcher.compute  SDFs.hlsl  VoxelConstruct.compute  VoxelGrid.hlsl  VoxelMarcher.compute  Wavefront.compute
Scripts/: CameraHandler.cs
Scripts/Texture Render/: SDFTexture.cs
Settings/Defaults/: PC_RPAsset.asset  SampleSceneProfile.asset  UniversalRenderPipelineGlobalSettings.asset
Textures/: SDF Renderer.asset
src/: gui.cpp  gui.h  lighting.glsl  main.cpp  movement.cpp  movement.h  raymarcher.glsl  sdfs.glsl  shaderLoad.cpp  shaderLoad.h
